# curiox

./: .gitignore  CMakeLists.txt  Makefile  Makefile.global  README.md  curiox--0.0.1.sql  curiox.c  curiox.control  test.sql
include/: custorage.h  engine.h  main.h
src/: curiox.c  custorage.cpp  engine.cpp
